<resources>
    <string name="app_name">Tiket Saya</string>
    <string name="splash_sub_text">Enjoy your tour now!</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email_address">Email Address</string>
    <string name="continue_label">Continue</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="selfie_time">Selfie Time</string>
    <string name="let_the_world_knows_yourself_nmore_better_and_ever">Let the world knows yourself \nmore better and ever</string>
    <string name="you_re_so_great">You\'re So Great</string>
    <string name="welcome_to_tiketsaya_and_enjoy_your_vacation">Welcome to TiketSaya \nand enjoy your vacation</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="main_menus">Main Menus</string>
    <string name="explore_the_beauty_of_world">Explore the beauty of world</string>
    <string name="hidayat_chandra">Hidayat Chandra</string>
    <string name="ticket_tips">Ticket Tips</string>
    <string name="pisa_tower">Pisa Tower</string>
    <string name="pisa_city_italy">Pisa City, Italy</string>
    <string name="_4_photo_spot">4 Photo Spot</string>
    <string name="information">Information</string>
    <string name="knowing">Knowing before travel</string>
    <string name="tripod">Tripod everywhere</string>
    <string name="wifi_available">Wifi Available</string>
    <string name="connect">Connect for any tourist</string>
    <string name="festival">13 Festival</string>
    <string name="drink_and_foods">Drink and foods</string>
    <string name="the_leaning_of_the_tower_of_pisa_comes_into_the_story_in_1173_when_construction_began">The leaning of the Tower of Pisa comes into the story in 1173, when construction began.</string>
    <string name="buy_ticket_label">Buy Ticket</string>
    <string name="learn">Learn it for many benefits</string>
    <string name="buy">Buy Ticket</string>
    <string name="check_the_amount_of_tickets">Check the amount of tickets</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="pricing">Pricing</string>
    <string name="your_current_balance_is">Your current balance is</string>
    <string name="pay">Pay Now</string>
    <string name="us_329">US$ 329</string>
    <string name="enjoy_your_tour">Enjoy Your Tour</string>
    <string name="you_have_successfully_bought_a_ticket_and_happy_holidays">You have successfully bought \na ticket and happy holidays</string>
    <string name="view_tickets">View Tickets</string>
    <string name="traveller">Traveller</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_tickets">My Tickets</string>
    <string name="refund_now">Refund Now</string>
    <string name="we_highly_suggest_you_to_nuse_the_correct_informations">We highly suggest you to \nuse the correct informations</string>
    <string name="save">Save Profile</string>
</resources>
