<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayTertiaryLight"
    tools:context=".activity.DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            style="@style/BackgroundDetail"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title_detail"
            style="@style/TextRegular.White.Center.ExtraLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pisa_tower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_sub_title_detail"
            style="@style/TextLight.White.TextSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/pisa_city_italy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

        <android.support.v7.widget.CardView
            android:id="@+id/cv_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_title_detail">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/normal_text_size">

                <TextView
                    android:id="@+id/tv_detail_header"
                    style="@style/TextRegular.Black.Normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/information" />

                <TextView
                    android:id="@+id/tv_detail_sub_header"
                    style="@style/TextLight.Gray.Center.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_detail_header"
                    android:text="@string/knowing" />

                <View
                    android:id="@+id/vw_lines"
                    style="@style/HorizontalLines"
                    android:layout_below="@id/tv_detail_sub_header" />

                <LinearLayout
                    android:id="@+id/ll_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vw_lines"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_photo_detail"
                        style="@style/IconDetail"
                        android:background="@drawable/ic_photo_detail" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_photo_spot"
                            style="@style/TextRegular.Black.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/_4_photo_spot" />

                        <TextView
                            android:id="@+id/tv_sub_photo_spot"
                            style="@style/TextLight.Gray.Center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_photo_spot"

                            android:text="@string/tripod" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_wifi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_photo"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_wifi_detail"
                        style="@style/IconDetail"
                        android:background="@drawable/ic_wifi_detail" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_wifi_spot"
                            style="@style/TextRegular.Black.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/wifi_available" />

                        <TextView
                            android:id="@+id/tv_sub_wifi_spot"
                            style="@style/TextLight.Gray.Center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_wifi_spot"
                            android:text="@string/connect" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_drink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_wifi"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_drink_detail"
                        style="@style/IconDetail"
                        android:background="@drawable/ic_drink_detail" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_drink_spot"
                            style="@style/TextRegular.Black.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:text="@string/festival" />

                        <TextView
                            android:id="@+id/tv_sub_drink_spot"
                            style="@style/TextLight.Gray.Center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_drink_spot"
                            android:text="@string/drink_and_foods" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    style="@style/TextLight.Gray.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_drink"
                    android:lineSpacingExtra="@dimen/spacing_extra"
                    android:text="@string/the_leaning_of_the_tower_of_pisa_comes_into_the_story_in_1173_when_construction_began" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:weightSum="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_menu">

            <ImageButton
                android:id="@+id/btn_back"
                style="@style/TextMedium.Gray.BtnWhite.ImageButtonBack"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.7" />

            <Button
                android:id="@+id/btn_buy"
                style="@style/TextMedium.White.BtnBlue"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="2.3"
                android:text="@string/buy_ticket_label" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
